fix text text-align

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,9 +131,8 @@ nav {
 
 .content-text-p {
   position: static;
-  text-align: center;
+  text-align: left;
   font-family: "Poppins", sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
